完成home上格式的修改，修改了padding和图片样式

--- a/public_html/home.html
+++ b/public_html/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=GBK">
     <meta name="keywords"
-          content="Haisheng Tan, USTC, homepage, University of Science and Technology of China,  谈海生, 个人主页, 中国科学技术大学">
+        content="Haisheng Tan, USTC, homepage, University of Science and Technology of China,  谈海生, 个人主页, 中国科学技术大学">
     <title>Dr. Haisheng TAN (谈海生) </title>
     <link type="text/css" rel="stylesheet" href="./homepage_files/style.css">
 
@@ -64,95 +64,91 @@
 
 <body>
 
-<div class="line"></div>
-<div id="content">
+    <div class="line"></div>
+    <div id="content">
 
-    <!-- 2020-2-18 15:31:52 1st Edit by ABerror-->
-    <!-- 2020-4-16 17:20:43 2nd Edit by ABerror-->
-    <!-- 下面这个注释掉的是原本的设置，反正就是有问题，于是被我改成了下下行 -->
-    <!-- <div id="experience" class="cv-section"> -->
-    <div id="experience">
-        <!-- 下面这个应该仅仅只是标记 -->
-        <a name="top"></a>
+        <!-- 2020-2-18 15:31:52 1st Edit by ABerror-->
+        <!-- 2020-4-16 17:20:43 2nd Edit by ABerror-->
+        <!-- 下面这个注释掉的是原本的设置，反正就是有问题，于是被我改成了下下行 -->
+        <!-- <div id="experience" class="cv-section"> -->
+        <div id="experience">
+            <!-- 下面这个应该仅仅只是标记 -->
+            <a name="top"></a>
 
-        <div id="leftNavbar">
-            <table id="indexTable" width="100%">
-                <tr>
-                    <h4><a href="./home.html" style="margin: auto;">Home</a></h4>
-                </tr>
-                <tr>
-                    <h4><a href="./news.html" style="margin: auto;">News</a></h4>
-                </tr>
-                <tr>
-                    <h4><a href="./research.html">Research</a></h4>
-                </tr>
-                <tr>
-                    <h4><a href="./teaching.html">Teaching</a></h4>
-                </tr>
-                <tr>
-                    <h4><a href="./services.html">Services</a></h4>
-                </tr>
-                <tr>
-                    <h4><a href="Student.html">Students</a></h4>
-                </tr>
-            </table>
-        </div>
-
-
-        <div id="wrap">
-            <div id="header">
-                <div id="header-content">
-                    <p>
-                    <h3>Haisheng TAN (谈海生)</h3>
-                    <strong>BSc &amp; BEng <em>USTC</em>; PhD <em>HKU</em> </strong><br>
-                    
-                    </p>
-                    </br>
-                    <p>
-                    <strong> Associate Professor</strong><br>
-                    <a href="http://cs.ustc.edu.cn/">School of Computer Science and Technology</a><br>
-                        <a href="http://en.ustc.edu.cn/">University of Science and Technology of China
-                            (USTC)</a><br>
-                        Hefei, Anhui, China <br>
-                        Office: Room 103, Keji-Shiyan Building, West Campus, USTC <br>
-                        Email: hstan@ustc.edu.cn &nbsp; <em>/</em> &nbsp; hstan.hku@gmail.com
-                    </p>
-                </div>
-                <!--end header-content-->
-                <table class="imgtable" width="192px" height="254px"  border="0">
+            <div id="leftNavbar">
+                <table id="indexTable" width="100%">
                     <tr>
-                        <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                            <!--<a href="./homepage_files/me2.png"><img src="./homepage_files/me2.png" alt="Haisheng TAN (谈海生) in 2015" width="0px" height="220px" /></a>&nbsp;</td>-->
-                            <a href="./homepage_files/me1.jpg"><img src="./homepage_files/me1.jpg"
-                                                                    alt="Haisheng TAN (谈海生) in 2017"/></a>
-                        <td align="left"></td>
+                        <h4><a href="./home.html" style="margin: auto;">Home</a></h4>
+                    </tr>
+                    <tr>
+                        <h4><a href="./news.html" style="margin: auto;">News</a></h4>
+                    </tr>
+                    <tr>
+                        <h4><a href="./research.html">Research</a></h4>
+                    </tr>
+                    <tr>
+                        <h4><a href="./teaching.html">Teaching</a></h4>
+                    </tr>
+                    <tr>
+                        <h4><a href="./services.html">Services</a></h4>
+                    </tr>
+                    <tr>
+                        <h4><a href="Student.html">Students</a></h4>
                     </tr>
                 </table>
-                <!--end header-photo-->
             </div>
-            <hr>
 
-             <h5>Research Interests: </h5>
-                         <ul>
-                   <li>
+
+            <div id="wrap">
+                <div id="header">
+                    <div id="header-content">
+                        <p>
+                            <h3>Haisheng TAN (谈海生)</h3>
+                            <strong>BSc &amp; BEng <em>USTC</em>; PhD <em>HKU</em> </strong><br>
+
+                        </p>
+                        </br>
+                        <p>
+                            <strong> Associate Professor</strong><br>
+                            <a href="http://cs.ustc.edu.cn/">School of Computer Science and Technology</a><br>
+                            <a href="http://en.ustc.edu.cn/">University of Science and Technology of China
+                                (USTC)</a><br>
+                            Hefei, Anhui, China <br>
+                            Office: Room 103, Keji-Shiyan Building, West Campus, USTC <br>
+                            Email: hstan@ustc.edu.cn &nbsp; <em>/</em> &nbsp; hstan.hku@gmail.com
+                        </p>
+                    </div>
+                    <!--end header-content-->
+                    <div id="header-photo">
+                        <img src="./homepage_files/me1.jpg" alt="Haisheng TAN (谈海生) in 2017"/>
+                    </div>
+                </div>
+                <hr>
+
+                <h5>Research Interests: </h5>
+                <ul>
+                    <li>
                         <span style="font-size: 15px;">Networking Algorithm Design and System Implementation:</span>
-                         <ul>
-                         <li>
-                       <span style="font-size: 15px;"> Mobile Computing, Edge Computing, Datacenter Networks, and Distributed AI at Edge</span>
-                        </li>
-                        <li>
-                       <span style="font-size: 15px;"> Online Algorithms, Distributed Algorithms, Game Theory, and Computational Complexity </span>
-                        </li>
+                        <ul>
+                            <li>
+                                <span style="font-size: 15px;"> Mobile Computing, Edge Computing, Datacenter Networks,
+                                    and Distributed AI at Edge</span>
+                            </li>
+                            <li>
+                                <span style="font-size: 15px;"> Online Algorithms, Distributed Algorithms, Game Theory,
+                                    and Computational Complexity </span>
+                            </li>
                         </ul>
                     </li>
                 </ul>
-               </ul>
+                </ul>
             </div>
         </div>
     </div>
     <!-- end of home -->
-</div>
-</div>
-</div>
+    </div>
+    </div>
+    </div>
 </body>
-</html> 
+
+</html>
