按需修改了teaching页面和services页面 更新部分样式表

--- a/public_html/news.html
+++ b/public_html/news.html
@@ -116,7 +116,7 @@
                     We are looking for self-motivated students (undergraduate and postgraduate)
                     working on Networking algorithms and System Implementation, especially to support big data
                     transmission and processing. If interested, please send me an email for details. <br><br>
-                    <strong>招生:</strong> 2020年入学的硕士研究生如愿意参与下述领域研究，请联系我：在线学习，移动计算、网络算法设计和系统实现（特别是支持大规模数据传输和计算的网络算法和系统）。<strong-iszhyang>微信：Haisheng_Tan</strong-iszhyang>
+                    <strong>招生:</strong> 2020年入学的硕士研究生如愿意参与下述领域研究，请联系我：在线学习，移动计算、网络算法设计和系统实现（特别是支持大规模数据传输和计算的网络算法和系统）。<strong-blue>微信：Haisheng_Tan</strong-blue>
 
                     <br>
 
