--- a/public_html/services.html
+++ b/public_html/services.html
@@ -104,32 +104,43 @@
         <div id="wrap">
 
             <!-- begin of services -->
-            <div id="content"  style="font-size: 15px">
-                <div class="service-section" style="font-size: 15px";>
+            <div id="content" style="font-size: 15px">
+                <div class="service-section" style="font-size: 15px" ;>
                     <h3>Services</h3>
-<!--                    <strong>PC members </strong></br>-->
-<!--                    <li><span><strong>PC members: </strong>ACM TURC'20(Keynote Chair), Bigcom'20(Vice TPC co-Chair), IEEE INFOCOM'20, IEEE INFOCOM'19, IEEE ICDCS'19, IEEE MASS'18, IEEE-->
-<!--                    									ICPADS'18, CBD'18, BigCom'18(Track Chair), IEEE MASS'17, BigCom'17, CWSN'17, CBD'17,-->
-<!--                    									and others before 2017.</span></li>-->
-<!--                    <li><span><strong>Reviewers: </strong> IEEE/ACM ToN, IEEE TMC, ACM TOSN, JOCO,TCS, Science-->
-<!--                    									China Information Science, and etc.</span></li>-->
-                    <h4><span>PC members: </span></h4>
+                    <!--                    <strong>PC members </strong></br>-->
+                    <!--                    <li><span><strong>PC members: </strong>ACM TURC'20(Keynote Chair), Bigcom'20(Vice TPC co-Chair), IEEE INFOCOM'20, IEEE INFOCOM'19, IEEE ICDCS'19, IEEE MASS'18, IEEE-->
+                    <!--                    									ICPADS'18, CBD'18, BigCom'18(Track Chair), IEEE MASS'17, BigCom'17, CWSN'17, CBD'17,-->
+                    <!--                    									and others before 2017.</span></li>-->
+                    <!--                    <li><span><strong>Reviewers: </strong> IEEE/ACM ToN, IEEE TMC, ACM TOSN, JOCO,TCS, Science-->
+                    <!--                    									China Information Science, and etc.</span></li>-->
                     <ul>
-                        <li>
-                            ACM TURC 2020 (Keynote Chair), Bigcom 2020 (Vice TPC co-Chair), IEEE MSN 2020 (Track
-                            Chair), IEEE INFOCOM 2020, BigCom 2020</span>
-                        </li>
-                        <li>IEEE INFOCOM 2019(Distinguished TPC Member), IEEE ICPADS 2019, IEEE MASS 2019, IEEE
-                            ICDCS 2019, BigCom 2019</span></li>
-                        <li>BigCom 2018(Track Chair), IEEE ICPADS 2018, IEEE MASS 2018, BigCom 2018, CBD
-                            2018</span></li>
-                        <li>IEEE MASS 2017, BigCom 2017, IIKI 2017, CWSN 2017, CBD 2017</span></li>
-                        <li>And others before 2017</span></li>
+                        <li>IEEE Senior Member, ACM Member, CCF Member</li>
+                        <li>ACM TURC 2020, Keynote Chair</li>
+                        <li>Bigcom 2020 Vice-TPC Co-Chair</li>
+                        <li>IEEE MSN 2020 (Track Chair)</li>
+                        <li>Bigcom 2018 (Track Chair)</li>
+                        <li>TPC Member (Selected):</li>
+                        <ul>
+                            <li>IEEE INFOCOM 2019 <b>(Distinguished TPC Member)</b>, 2020;</li>
+                            <li>IEEE ICPADS 2018, 2019;</li>
+                            <li>IEEE MASS 2017, 2018, 2019;</li>
+                            <li>IEEE ICDCS 2019;</li>
+                            <li>BigCom 2017, 2018, 2019, 2020;</li>
+                            <li>IIKI 2017, CWSN 2017, and some others before 2017.</li>
+                        </ul>
+                        <li>Journal Reviewer:</li>
+                        <ul>
+                            <li>IEEE Transactions on Cloud Computing (TCC)</li>
+                            <li>IEEE/ACM Transactions on Networking (ToN)</li>
+                            <li>IEEE Transactions on Mobile Computing (TMC)</li>
+                            <li>ACM Transactions on Sensor Networks (TOSN)</li>
+                            <li>IEEE Transactions on Services Computing (TSC)</li>
+                            <li>IEEE Transactions on Communications (TCOM)</li>
+                            <li>Theoretical Computer Science (TCS)</li>
+                            <li>Journal of Combinatorial Optimization</li>
+                            <li>SCIENCE CHINA: Information Sciences, and etc.</li>
+                        </ul>
                     </ul>
-                    <h4><span>Reviewers:  </span></h4>
-                    <p>IEEE TCC, IEEE/ACM ToN, IEEE TMC, ACM TOSN, JOCO,TCS, Science China Information Science, and
-                        etc.</span>
-                    </p>
                 </div>
             </div>
             <!-- end of services -->
