--- a/public_html/teaching.html
+++ b/public_html/teaching.html
@@ -133,6 +133,9 @@
                                 <li><span>Topics in Theory of Computing, International School, Jinan University, Fall
 2013, 2014, 2015.</span></li>
                             </ul>
+<!--                            ²åÈëÍ¼Æ¬-->
+                            <br>
+                            <img src="./homepage_files/textbook.png" alt="textbook"/>
 
                         </div>
                     </div>
